# src/main/resources/openapi.yaml
@@ -1,29 +1,34 @@
 openapi: 3.0.1
 info:
   title: Swagger Petstore
-  description: 'This is a sample server Petstore server.  You can find out more about     Swagger
-    at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).      For
-    this sample, you can use the api key `special-key` to test the authorization     filters.'
+  description: 'API to help poc effort on how to handle anyOf and oneOf in spring'
   termsOfService: http://swagger.io/terms/
   contact:
-    email: apiteam@swagger.io
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: 1.0.0
-externalDocs:
-  description: Find out more about Swagger
-  url: http://swagger.io
-servers:
-  - url: https://petstore.swagger.io/v2
-  - url: http://petstore.swagger.io/v2
+    email: adriancyago@gmail.com
+  version: 1.0.0-SNAPSHOT
 tags:
   - name: pet
     description: Everything about your Pets
-    externalDocs:
-      description: Find out more
-      url: http://swagger.io
+  - name: person
+    description: Your profile
 paths:
+  /persons:
+    post:
+      tags:
+        - person
+      operationId: recordPersonProfile
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Person'
+      responses:
+        '200':
+          description: Recorded
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Person'
   /pets:
     post:
       tags:
@@ -33,6 +38,8 @@ paths:
         content:
           application/json:
             schema:
+              discriminator:
+                propertyName: species
               oneOf:
                 - $ref: '#/components/schemas/Cat'
                 - $ref: '#/components/schemas/Dog'
@@ -63,9 +70,24 @@ paths:
                 $ref: '#/components/schemas/UpdateResponse'
 components:
   schemas:
+    Person:
+      type: object
+      properties:
+        name:
+          type: string
+        age:
+          type: integer
+        pet:
+          type: object
+          oneOf:
+            - $ref: '#/components/schemas/Cat'
+            - $ref: '#/components/schemas/Dog'
     Dog:
       type: object
       properties:
+        species:
+          type: string
+          example: dog
         bark:
           type: boolean
         breed:
@@ -74,6 +96,9 @@ components:
     Cat:
       type: object
       properties:
+        species:
+          type: string
+          example: cat
         hunts:
           type: boolean
         age:
